lazy-load viewer metadata for current image only
